--- a/glorify/index.html
+++ b/glorify/index.html
@@ -456,7 +456,7 @@
     <div class="Grid Grid--full u-textCenter">
       <div class="Grid-cell">
         <h1 class="Grid Grid--center"> <span class="specialTextL">Case study</span><img class="moveUpDown widthLogo"
-            src="../../icon/arrow-accordion-down.svg" alt="Research">
+            src="../icon/arrow-accordion-down.svg" alt="Research">
         </h1>
       </div>
     </div>
@@ -509,7 +509,7 @@
       <div class="Grid Grid--full u-textCenter wrapper">
         <div class="Grid-cell">
           <h1 class="Grid Grid--center"> <span>Research</span><img class="moveUpDown widthLogo"
-              src="../../icon/icon_research.svg" alt="Research">
+              src="../icon/icon_research.svg" alt="Research">
           </h1>
         </div>
       </div>
