--- a/glorify/index.html
+++ b/glorify/index.html
@@ -294,7 +294,7 @@
   </div>
   <div class="blankHS"></div>
   <div class="colorBgGLORIFY">
-    <div class="blankHXS"></div>
+    <div class="blankHS"></div>
     <!-- Slideshow Title -->
     <div class="wrapper">
       <div class="Grid-cell">
@@ -1272,6 +1272,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -1291,6 +1293,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -1372,6 +1376,7 @@
             </div>
 
           </div>
+          <div class="blankHS"></div>
 
           <div class="Grid Grid--full">
             <div class="Grid-cell">
@@ -1392,6 +1397,8 @@
               </div>
             </div>
           </div>
+          <div class="blankHS"></div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -1432,6 +1439,7 @@
 
           </div>
 
+          <div class="blankHS"></div>
 
         </div>
       </section>
@@ -1443,8 +1451,7 @@
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h2 class="tArrow">Test &#38; Iterate <img class="seArrow" src="../icon/arrow-se.svg"
-                    alt="icon arrow">
+                <h2 class="tArrow">Test &#38; Iterate <img class="seArrow" src="../icon/arrow-se.svg" alt="icon arrow">
                 </h2>
               </div>
             </div>
@@ -3258,7 +3265,7 @@
             </div>
           </div>
           <!-- Arrow -->
-          <div class="Grid Grid--full wrapper">
+          <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
@@ -3306,47 +3313,23 @@
               </div>
             </div>
           </div>
-
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
                 <h2 class="centerVer"> <img class="iconS" src="IconIdea.svg" alt="Design">
-                  <span class="colorGLORIFYOrange"> Next step:</span>
-                </h2>
-              </div>
-            </div>
-          </div>
-          <div class="Grid Grid--gutters Grid--cols-2">
-            <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Streamlining Group Prayer: </strong> </h4>
-                  <p>Refine the process for creating and join a new group prayer. This could involve simplifying certain
-                    steps or providing clearer instructions to enhance the user experience.</p>
-                </div>
-              </div>
-            </div>
-            <div class="Grid-cell">
-              <div class="element">
-                <h4> <strong> Enhancing Search &#38; invite Functionality:</strong> </h4>
-                <p>Develop a search function and incorporate an invitation feature for group prayers, enabling users to
-                  discover appropriate group prayer sessions and invite friends to pray together.
-                </p>
-              </div>
-            </div>
-
-
-          </div>
-          <div class="Grid Grid--full">
-            <div class="Grid-cell">
-              <div class="element">
-                <h2 class="centerVer"> <img class="iconS" src="IconTest.svg" alt="Design">
                   <span class="colorGLORIFYOrange"> What could be improved:</span>
                 </h2>
               </div>
             </div>
           </div>
           <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <h4> <strong> Streamlining Group Prayer: </strong> </h4>
+                <p>Refine the process for creating and join a new group prayer. This could involve simplifying certain
+                  steps or providing clearer instructions to enhance the user experience.</p>
+              </div>
+            </div>
             <div class="Grid-cell">
               <div class="element">
                 <h4> <strong>Detailed Guidance: </strong> </h4>
@@ -3356,17 +3339,27 @@
                 </p>
               </div>
             </div>
-            <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Enhancing Interactive Features During Waiting Time:</strong> </h4>
-                  <p> While interactive features were appreciated, they could be expanded to provide a more engaging and
-                    enriching experience to users during the waiting period.</p>
-                </div>
-              </div>
-            </div>
 
           </div>
+          <div class="Grid Grid--gutters Grid--cols-2">
+
+            <div class="Grid-cell">
+              <div class="element">
+                <h4> <strong> Enhancing Interactive Features During Waiting Time:</strong> </h4>
+                <p> While interactive features were appreciated, they could be expanded to provide a more engaging and
+                  enriching experience to users during the waiting period.</p>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <h4> <strong> Enhancing Search &#38; Invite Functionality:</strong> </h4>
+                <p>Develop a search function and incorporate an invitation feature for group prayers, enabling users
+                  to discover appropriate group prayer sessions and invite friends to pray together.
+                </p>
+              </div>
+            </div>
+          </div>
+
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
