--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1483,14 +1483,10 @@
               <div class="element">
                 <h4> <strong>Intro</strong> </h4>
                 <p> Thanks for supporting me with this feedback session! I will present two early design concepts for
-                  a
-                  mobile app. <strong class="colorGLORIFYOrange"> The goal of these apps is to facilitate individuals
-                    in
-                    joining group worship, while
-                    also enabling interaction and connection with other fellowships within the Glorify app. </strong>
-                  I
-                  want
-                  to gather feedback about these ideas before I move forward with the design process.</p>
+                  a mobile app. <strong class="colorBgHighlight"> The goal of these apps is to facilitate individuals
+                    in joining group worship, while also enabling interaction and connection with other fellowships
+                    within the Glorify app. </strong> I want to gather feedback about these ideas before I move forward
+                  with the design process.</p>
               </div>
             </div>
           </div>
@@ -1499,9 +1495,10 @@
               <div class="element">
                 <h4> <strong>Concept A</strong> </h4>
 
-                <p>the first concept is adding a group prayer feature to the existing Christian single-player app. The
-                  goal
-                  is to help users discover like-minded individuals during group prayer sessions.</p>
+                <p>the first concept is adding a <strong class="colorBgHighlight">group prayer</strong> feature to the
+                  existing Christian single-player app. The
+                  goal is to help users <strong class="colorBgHighlight">discover like-minded individuals during group
+                    prayer</strong> sessions.</p>
                 <p>With the app, users can:</p>
                 <ul>
                   <li class="listCircle">Create a group prayer room </li>
@@ -1517,9 +1514,11 @@
             <div class="Grid-cell">
               <div class="element">
                 <h4> <strong>Concept B</strong> </h4>
-                <p>the first concept is adding a group prayer feature to the existing Christian single-player app. The
-                  goal
-                  is to help users discover like-minded individuals during group prayer sessions.</p>
+                <p>This concept involves integrating a <strong class="colorBgHighlight">Bible study</strong> session
+                  into the existing Christian single-player
+                  app, aiming to <strong class="colorBgHighlight">facilitate meaningful connections</strong> among users
+                  who <strong class="colorBgHighlight">share similar beliefs and interests</strong>
+                  through these study sessions.</p>
                 <p>With the app, users can:</p>
                 <ul>
                   <li class="listCircle">Create a Bible study room </li>
@@ -2100,20 +2099,16 @@
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Test goal </strong> </h4>
-                  <p>focus on the overall functionality, focusing on group prayer, adding a new fellowship, and
-                    chatting with other fellowships.</p>
-                </div>
+              <div class="element">
+                <h4> <strong> Test goal </strong> </h4>
+                <p>focus on the overall functionality, focusing on group prayer, adding a new fellowship, and
+                  chatting with other fellowships.</p>
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Method </strong> </h4>
-                  <p>Moderated tests</p>
-                </div>
+              <div class="element">
+                <h4> <strong> Method </strong> </h4>
+                <p>Moderated tests</p>
               </div>
             </div>
           </div>
@@ -2718,20 +2713,16 @@
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Test goal </strong> </h4>
-                  <p>focus on the Group prayer, joining an existing Christian group worship and creating a new one
-                    within the Glorify app.</p>
-                </div>
+              <div class="element">
+                <h4> <strong> Test goal </strong> </h4>
+                <p>focus on the Group prayer, joining an existing Christian group worship and creating a new one
+                  within the Glorify app.</p>
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Method </strong> </h4>
-                  <p>Moderated tests</p>
-                </div>
+              <div class="element">
+                <h4> <strong> Method </strong> </h4>
+                <p>Moderated tests</p>
               </div>
             </div>
           </div>
@@ -3057,20 +3048,16 @@
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Test goal </strong> </h4>
-                  <p>focus on the Group prayer experience. Emphasize the group prayer experience and enhance user
-                    interaction</p>
-                </div>
+              <div class="element">
+                <h4> <strong> Test goal </strong> </h4>
+                <p>focus on the Group prayer experience. Emphasize the group prayer experience and enhance user
+                  interaction</p>
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Method </strong> </h4>
-                  <p>Moderated tests</p>
-                </div>
+              <div class="element">
+                <h4> <strong> Method </strong> </h4>
+                <p>Moderated tests</p>
               </div>
             </div>
           </div>
@@ -3295,21 +3282,17 @@
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Ease of Navigation: </strong> </h4>
-                  <p> Users found the navigation to the group prayer section intuitive, and the time taken to reach this
-                    section was within acceptable limits.</p>
-                </div>
+              <div class="element">
+                <h4> <strong> Ease of Navigation: </strong> </h4>
+                <p> Users found the navigation to the group prayer section intuitive, and the time taken to reach this
+                  section was within acceptable limits.</p>
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Ease of Joining Existing Group Prayers: </strong> </h4>
-                  <p>The process for joining existing group prayers received positive feedback, indicating the feature
-                    is very easy to use</p>
-                </div>
+              <div class="element">
+                <h4> <strong> Ease of Joining Existing Group Prayers: </strong> </h4>
+                <p>The process for joining existing group prayers received positive feedback, indicating the feature
+                  is very easy to use</p>
               </div>
             </div>
           </div>
@@ -3385,17 +3368,15 @@
               </div>
             </div>
             <div class="Grid-cell">
-              <div class="Grid-cell">
-                <div class="element">
-                  <h4> <strong> Understanding the Concept of Community: </strong> </h4>
-                  <p> Given the time constraints, we defined community as a "shared faith, mutual understanding,
-                    support, and the opportunity to connect with others." This was a suitable starting point for our
-                    study. However, the concept of community, especially within a religious context, is multifaceted and
-                    richly layered. If we had more time, it would have been beneficial to delve deeper into
-                    understanding the nuances of the Christian community from a social, psychological, and cultural
-                    perspective. This deeper understanding could inform more empathetic and holistic design decisions.
-                  </p>
-                </div>
+              <div class="element">
+                <h4> <strong> Understanding the Concept of Community: </strong> </h4>
+                <p> Given the time constraints, we defined community as a "shared faith, mutual understanding,
+                  support, and the opportunity to connect with others." This was a suitable starting point for our
+                  study. However, the concept of community, especially within a religious context, is multifaceted and
+                  richly layered. If we had more time, it would have been beneficial to delve deeper into
+                  understanding the nuances of the Christian community from a social, psychological, and cultural
+                  perspective. This deeper understanding could inform more empathetic and holistic design decisions.
+                </p>
               </div>
             </div>
 
@@ -3412,7 +3393,6 @@
 
 
 
-  <div class="blankHS"></div>
 
 
 
