--- a/glorify/index.html
+++ b/glorify/index.html
@@ -345,7 +345,7 @@
       <div class="Grid-cell">
         <div class="element">
           <img class="iconS moveUpDown" src="Note_Hover.svg" alt="Pause">
-          <p class="specialTextDemo colorGLORIFYGreen">Hover to pause slideshow
+          <p class="specialTextDemo colorGLORIFYGreen">Hover to pause or navigate through the slideshow
           </p>
         </div>
         <div class="element">
@@ -1013,7 +1013,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <img class="iconS moveUpDown" src="Note_Hover.svg" alt="Pause">
-                <p class="specialTextDemo colorGLORIFYGreen">Hover to pause slideshow
+                <p class="specialTextDemo colorGLORIFYGreen">Hover to pause or navigate through the slideshow
                 </p>
               </div>
             </div>
@@ -1904,7 +1904,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <img class="iconS moveUpDown" src="Note_Hover.svg" alt="Pause">
-                <p class="specialTextDemo colorGLORIFYGreen">Hover to pause slideshow
+                <p class="specialTextDemo colorGLORIFYGreen">Hover to pause or navigate through the slideshow
                 </p>
               </div>
             </div>
@@ -2463,7 +2463,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <img class="iconS moveUpDown" src="Note_Hover.svg" alt="Pause">
-                <p class="specialTextDemo colorGLORIFYGreen">Hover to pause slideshow
+                <p class="specialTextDemo colorGLORIFYGreen">Hover to pause or navigate through the slideshow
                 </p>
               </div>
             </div>
@@ -2737,7 +2737,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <img class="iconS moveUpDown" src="Note_Hover.svg" alt="Pause">
-                <p class="specialTextDemo colorGLORIFYGreen">Hover to pause slideshow
+                <p class="specialTextDemo colorGLORIFYGreen">Hover to pause or navigate through the slideshow
                 </p>
               </div>
             </div>
