--- a/glorify/index.html
+++ b/glorify/index.html
@@ -547,9 +547,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element leftVerLine border-radius colorBgGlorifyLt GLORIFY">
-                <h3> The research goal is to study the Christian community, understand their interaction patterns,
-                  discover why they wish to connect with others in the community, and explore how to incorporate this
-                  initial community version into the existing Glorify app.
+                <h3> The research goal is to study the <span class="textDecor GLORIFY">Christian community</span>, understand their interaction patterns, discover why they wish to connect with others in the community, and explore how to incorporate this  <span class="textDecor GLORIFY">initial community version into the existing Glorify app</span>.
                 </h3>
               </div>
             </div>
@@ -581,9 +579,9 @@
             <div class="Grid-cell">
               <div class="element ">
                 <h4> <strong> Context</strong> </h4>
-                <p>Glorify primarily offers a <span class="colorBgHighlight">single-player</span> experience, where
-                  users can explore <span class="colorBgHighlight">a vast library of
-                    content</span> in a feature known as the <span class="colorBgHighlight">Daily Worship</span>.
+                <p>Glorify primarily offers a <span class="textDecor GLORIFY">single-player</span> experience, where
+                  users can explore <span class="textDecor GLORIFY">a vast library of
+                    content</span> in a feature known as the <span class="textDecor GLORIFY">Daily Worship</span>.
                   Renowned as the top Christian Daily Worship app.
                 </p>
               </div>
@@ -591,7 +589,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <h4> <strong> Problem statement</strong> </h4>
-                <p>Glorify exists in a primarily <span class="colorBgHighlight">isolated experience</span>. Community is
+                <p>Glorify exists in a primarily <span class="textDecor GLORIFY">isolated experience</span>. Community is
                   integral to Christianity. There’s
                   an opportunity to fully meet the user's needs for social and collaborative experiences in their
                   faith journey.</p>
@@ -612,14 +610,14 @@
               <div class=" element">
                 <h4> <strong> Background</strong> </h4>
                 <p>The Glorify platform has mainly been utilized as a single-player experience, which has <span
-                    class="colorBgHighlight">made it challenging for users to establish new connections</span>. In order
+                    class="textDecor GLORIFY">made it challenging for users to establish new connections</span>. In order
                   to address this issue, my aim is to leverage the platform's existing infrastructure and introduce
-                  activities that promote connections and cater to the <span class="colorBgHighlight">initial version of
+                  activities that promote connections and cater to the <span class="textDecor GLORIFY">initial version of
                     its community</span>.
                 </p>
                 <p>Group worship constitutes a significant aspect of Christian community activities. While Glorify
                   offers a vast library of content for individual daily worship, this research will specifically
-                  concentrate on the <span class="colorBgHighlight">communal aspects of worship</span>.</p>
+                  concentrate on the <span class="textDecor GLORIFY">communal aspects of worship</span>.</p>
               </div>
             </div>
           </div>
@@ -627,7 +625,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <h4> <strong>Research goal</strong> </h4>
-                <p>Understand both the successful methods and pain points of having <span class="colorBgHighlight">group
+                <p>Understand both the successful methods and pain points of having <span class="textDecor GLORIFY">group
                     worship</span>
                 </p>
               </div>
@@ -645,10 +643,9 @@
                 <h4> <strong> Research questions</strong> </h4>
                 <ul>
                   <li class="listCircle">
-                    How do Christians typically attend group worship? what they do? which group worship they like the
-                    most? </li>
+                    How do <span class="textDecor GLORIFY">Christians typically attend group worship</span>? what they do? which group worship they like the most? </li>
                   <li class="listCircle">
-                    Why Christians participate in group worship? How did they initiate? what is their motivation? </li>
+                    Why Christians  <span class="textDecor GLORIFY">participate in group worship</span>? How did they initiate? what is their <span class="textDecor GLORIFY">motivation</span>? </li>
                   <li class="listCircle">
                     What types of group worship have been most/least valuable to the participants in the past?
                   </li>
@@ -788,32 +785,32 @@
                       <div class="blankHXS"></div>
                       <h6> <strong> What kind of group worship have you participated in as part of a Christian group
                           worship? </strong> </h6>
-                      <h6>I engage in daily group worship by participating in <span class="colorBgHighlight">morning
-                          prayer gatherings</span>, <span class="colorBgHighlight">small group
+                      <h6>I engage in daily group worship by participating in <span class="textDecor GLORIFY">morning
+                          prayer gatherings</span>, <span class="textDecor GLORIFY">small group
                           Bible studies</span>, and occasional attend traditional liturgical worship services in
                         a Protestant church..</h6>
 
                       <h6> <strong> You mentioned participating in morning prayer, small group Bible studies, and
                           weekday worship services. I can imagine you already have had a lot of group worship
                           experiences. Which one of these do you visit most frequently?</strong> </h6>
-                      <h6>I most frequently visit <span class="colorBgHighlight">small group Bible studies</span>. I
+                      <h6>I most frequently visit <span class="textDecor GLORIFY">small group Bible studies</span>. I
                         appreciate the in-depth discussions and the opportunity to connect with others on <span
-                          class="colorBgHighlight">a deeper level in our shared exploration of the Bible</span>. It is
-                        the setting where I find the most <span class="colorBgHighlight">personal growth and fulfillment
+                          class="textDecor GLORIFY">a deeper level in our shared exploration of the Bible</span>. It is
+                        the setting where I find the most <span class="textDecor GLORIFY">personal growth and fulfillment
                           in my faith journey</span>.</h6>
 
                       <h6> <strong> Why do you participate in group worship? </strong> </h6>
                       <h6>In a community of believers, we come together in group worship to experience a deep sense of
                         connection and belonging. I find solace and strength in this collective gathering. The
-                        opportunity <span class="colorBgHighlight">to worship alongside fellow believers</span> uplifts
+                        opportunity <span class="textDecor GLORIFY">to worship alongside fellow believers</span> uplifts
                         my spirit and reminds me of the power of unity. Engaging in group worship allows me to <span
-                          class="colorBgHighlight">express my gratitude and praise to God</span>, sharing in the
+                          class="textDecor GLORIFY">express my gratitude and praise to God</span>, sharing in the
                         joy of His presence with others who walk the same path of faith.</h6>
 
                       <h6> <strong> How did you initially become a part of group worship?
                         </strong> </h6>
                       <h6>I initially became a part of group worship through my involvement in the <span
-                          class="colorBgHighlight">local church community.</span> I may have started by attending church
+                          class="textDecor GLORIFY">local church community.</span> I may have started by attending church
                         services or events, where I was welcomed and introduced
                         to the idea of group worship. It could have been through an invitation from a friend or family
                         member, or simply a personal decision to seek spiritual connection and community. Over time, as
@@ -833,13 +830,13 @@
 
                       <h6> <strong> Have you encountered any difficulties in discovering new group worship experiences
                           or had any negative experiences with group worship? </strong> </h6>
-                      <h6>I have encountered some difficulties in <span class="colorBgHighlight">discovering new group
-                          worship experiences</span>. It can be <span class="colorBgHighlight">challenging to find
+                      <h6>I have encountered some difficulties in <span class="textDecor GLORIFY">discovering new group
+                          worship experiences</span>. It can be <span class="textDecor GLORIFY">challenging to find
                           contemplative and introspective worship settings</span> that align with my preference for
                         quieter worship environments. However, I have actively sought out communities and events that
                         offer these types of worship experiences and have been able to find fulfillment in connecting
                         with
-                        <span class="colorBgHighlight">like-minded individuals</span>.
+                        <span class="textDecor GLORIFY">like-minded individuals</span>.
                       </h6>
 
                       <h6> <strong> Additional notes</strong> </h6>
@@ -859,9 +856,9 @@
                       <div class="blankHXS"></div>
                       <h6> <strong> What kind of group worship have you participated in as part of a Christian group
                           event?</strong> </h6>
-                      <h6>I participate in daily group worship by engaging in <span class="colorBgHighlight">devotionals
+                      <h6>I participate in daily group worship by engaging in <span class="textDecor GLORIFY">devotionals
                           and guided prayer sessions within small groups</span>, attending women's ministry groups,
-                        <span class="colorBgHighlight">weekday worship</span> services, and being part of mentoring
+                        <span class="textDecor GLORIFY">weekday worship</span> services, and being part of mentoring
                         relationships.
                       </h6>
 
@@ -870,26 +867,26 @@
                       </h6>
                       <h6>My favorite group worship is to attend weekday worship services. These gatherings provide a
                         meaningful spiritual reset and help me maintain a consistent focus on my faith throughout the
-                        week. I find solace and <span class="colorBgHighlight">inspiration in coming together with
+                        week. I find solace and <span class="textDecor GLORIFY">inspiration in coming together with
                           others to worship and learn from the teachings shared during these services</span>.</h6>
 
                       <h6> <strong>Why do you participate in group worship? </strong> </h6>
                       <h6>Group worship is a sacred space where I feel a strong sense of community. The <span
-                          class="colorBgHighlight">warmth and support of fellow believers</span> provide me with
-                        <span class="colorBgHighlight">encouragement and accountability</span>. Through collective
+                          class="textDecor GLORIFY">warmth and support of fellow believers</span> provide me with
+                        <span class="textDecor GLORIFY">encouragement and accountability</span>. Through collective
                         worship
                         and prayer, I draw closer to God, feeling His presence as we lift our voices together. It is
-                        during these moments that I experience the <span class="colorBgHighlight">power of shared faith,
+                        during these moments that I experience the <span class="textDecor GLORIFY">power of shared faith,
                           finding comfort and strength in knowing that I am not alone on my journey</span>.
                       </h6>
 
                       <h6> <strong> How did you initially become a part of group worship?
                         </strong> </h6>
                       <h6>My journey into group worship began through an intentional search for <span
-                          class="colorBgHighlight">spiritual nourishment and fellowship.</span> It may have started with
+                          class="textDecor GLORIFY">spiritual nourishment and fellowship.</span> It may have started with
                         a desire to explore my faith more deeply or a specific event or program that caught my
                         attention. I might have joined a women's ministry group, attended a weekday worship service, or
-                        <span class="colorBgHighlight">connected with like-minded individuals in the community</span>
+                        <span class="textDecor GLORIFY">connected with like-minded individuals in the community</span>
                         who encouraged me to be a part of group worship. The warm and welcoming environment, coupled
                         with the sense of connection and support, made me feel at home and motivated me to continue
                         participating in group worship.
@@ -901,16 +898,16 @@
                         hymns and contemporary worship songs strikes a beautiful balance, reaching into the depths of my
                         faith. Participating in women's ministry events or retreats has provided a nurturing and
                         empowering environment where I can connect with other women of faith.<span
-                          class="colorBgHighlight">The collective worship, teaching</span>, and fellowship in these
+                          class="textDecor GLORIFY">The collective worship, teaching</span>, and fellowship in these
                         gatherings have touched my heart and strengthened my spiritual journey.</h6>
 
                       <h6> <strong> Have you encountered any difficulties in discovering new group worship experiences
                           or had any negative experiences with group worship? </strong> </h6>
                       <h6>I have not encountered significant difficulties in discovering new group worship experiences.
                         I have found a variety of worship opportunities that align with my desire for a balanced blend
-                        of <span class="colorBgHighlight">traditional hymns and contemporary worship songs</span>.
+                        of <span class="textDecor GLORIFY">traditional hymns and contemporary worship songs</span>.
                         However, there have been instances where I felt disconnected from the worship environment due to
-                        <span class="colorBgHighlight">a lack of inclusivity or relevance to my specific stage of
+                        <span class="textDecor GLORIFY">a lack of inclusivity or relevance to my specific stage of
                           life</span>.
                       </h6>
 
@@ -934,7 +931,7 @@
                       <h6> <strong> What kind of group worship have you participated in as part of a Christian group
                           event?</strong> </h6>
                       <h6>I embrace vibrant and energetic daily group worship through <span
-                          class="colorBgHighlight">contemporary music, engaging in small group studies and discussions,
+                          class="textDecor GLORIFY">contemporary music, engaging in small group studies and discussions,
                           volunteering at food banks</span> or community outreach programs, and expressing my faith
                         through creative worship expressions like art, music, or dance.</h6>
 
@@ -1522,7 +1519,7 @@
               <div class="element">
                 <h4> <strong>Intro</strong> </h4>
                 <p> Thanks for supporting me with this feedback session! I will present two early design concepts for
-                  a mobile app. <span class="colorBgHighlight"> The goal of these apps is to facilitate individuals
+                  a mobile app. <span class="textDecor GLORIFY"> The goal of these apps is to facilitate individuals
                     in joining group worship, while also enabling interaction and connection with other fellowships
                     within the Glorify app. </span> I want to gather feedback about these ideas before I move forward
                   with the design process.</p>
@@ -1534,9 +1531,9 @@
               <div class="element">
                 <h4> <strong>Concept A</strong> </h4>
 
-                <p>the first concept is adding a <span class="colorBgHighlight">group prayer</span> feature to the
+                <p>the first concept is adding a <span class="textDecor GLORIFY">group prayer</span> feature to the
                   existing Christian single-player app. The
-                  goal is to help users <span class="colorBgHighlight">discover like-minded individuals during group
+                  goal is to help users <span class="textDecor GLORIFY">discover like-minded individuals during group
                     prayer</span> sessions.</p>
                 <p>With the app, users can:</p>
                 <ul>
@@ -1553,10 +1550,10 @@
             <div class="Grid-cell">
               <div class="element">
                 <h4> <strong>Concept B</strong> </h4>
-                <p>This concept involves integrating a <span class="colorBgHighlight">Bible study</span> session
+                <p>This concept involves integrating a <span class="textDecor GLORIFY">Bible study</span> session
                   into the existing Christian single-player
-                  app, aiming to <span class="colorBgHighlight">facilitate meaningful connections</span> among users
-                  who <span class="colorBgHighlight">share similar beliefs and interests</span>
+                  app, aiming to <span class="textDecor GLORIFY">facilitate meaningful connections</span> among users
+                  who <span class="textDecor GLORIFY">share similar beliefs and interests</span>
                   through these study sessions.</p>
                 <p>With the app, users can:</p>
                 <ul>
